--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 version: '3'
 services:
-    gateway:
+    network:
         image: openmined/grid-gateway:latest
         build: .
         environment:
@@ -10,12 +10,6 @@ services:
                 - DATABASE_URL=sqlite:///databasegateway.db
         ports:
         - 5000:5000
-    redis:
-        image: redis:latest
-        expose:
-        - 6379
-        ports:
-        - 6379:6379
     bob:
         image: openmined/grid-node:latest
         environment:
@@ -23,8 +17,7 @@ services:
                 - ADDRESS=http://bob:3000/
                 - PORT=3000
         depends_on:
-                - "gateway"
-                - "redis"
+                - "network"
         ports:
         - 3000:3000
     alice:
@@ -34,8 +27,7 @@ services:
                 - ADDRESS=http://alice:3001/
                 - PORT=3001
         depends_on:
-                - "gateway"
-                - "redis"
+                - "network"
         ports:
         - 3001:3001
     bill:
@@ -45,8 +37,7 @@ services:
                 - ADDRESS=http://bill:3002/
                 - PORT=3002
         depends_on:
-                - "gateway"
-                - "redis"
+                - "network"
         ports:
         - 3002:3002
     james:
@@ -56,7 +47,6 @@ services:
                 - ADDRESS=http://james:3003/
                 - PORT=3003
         depends_on:
-                - "gateway"
-                - "redis"
+                - "network"
         ports:
         - 3003:3003
